--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
