Add server configuration, models, controllers, services, and routes for laboratory management system

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,1 +1,15 @@
-PORT=
+ # Server Configuration
+PORT=3000
+NODE_ENV=development
+
+# Database Configuration
+MONGODB_URI=mongodb://localhost:27017/lab-management-system
+
+# AWS S3 Configuration
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_S3_BUCKET_NAME=lab-management-reports
+
+# CORS Origins
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
