--- a/server/package.json
+++ b/server/package.json
@@ -14,24 +14,41 @@
     "test": "vitest",
     "test:run": "vitest --run",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "seed": "tsx --env-file .env src/scripts/seed.ts"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "aws-sdk": "^2.1663.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.7.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tsconfig/node22": "^22.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.4",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-plugin-perfectionist": "^4.15.0",
+    "mongodb-memory-server": "^10.0.1",
     "prettier": "^3.6.2",
+    "supertest": "^7.0.0",
     "tsx": "^4.20.3",
     "typescript": "~5.8.0",
     "typescript-eslint": "^8.38.0",
