--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx --watch --env-file .env src/index.ts",
-    "start": "node --env-file .env dist/index.js",
+    "start": "node --env-file .env dist/src/index.js",
     "build": "tsc",
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
@@ -24,7 +24,8 @@
     "aws-sdk": "^2.1663.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0",
@@ -36,7 +37,7 @@
     "@tsconfig/node22": "^22.0.2",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.23",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^24.1.0",
