--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "aws-sdk": "^2.1663.0",
+    "@aws-sdk/client-s3": "^3.859.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
